# gtk-sudoku

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generated.xml  hardest.xml  test.xml  version.h.in
include/: app.h  board-area.h  board-view.h  board.h  config.h  generator.h  main-menu.h  main-window.h  player.h  solver.h  sudoku.h  utils.h  welcome-window.h
include/dialogs/: entry-dialog.h  new-game-dialog.h  player-select-dialog.h
include/windows/: collection-window.h  main-window.h  welcome-window.h
src/: app.cpp  board-area.cpp  board-view.cpp  board.cpp  config.cpp  generator.cpp  main-menu.cpp  main-window.cpp  player.cpp  solver.cpp  sudoku.cpp  utils.cpp  welcome-window.cpp
src/dialogs/: entry-dialog.cpp  new-game-dialog.cpp  player-select-dialog.cpp
src/windows/: collection-window.cpp  main-window.cpp  welcome-window.cpp
ui/: about-dialog.glade  collection-window.glade  entry-dialog.glade  main-window.glade  new-game-dialog.glade  player-select-dialog.glade  style.css  welcome-window.glade
